# loan-amount-prediction

./: .gitignore  Dockerfile  README.md  mydb.sqlite  note.md  pyproject.toml  tox.ini
.circleci/: config.yml
batch_deployment_and_orchestration/: loan_deployment.py  loan_model_inference.py  loan_pred_regression_model_output_v0.0.7.pkl  output_predictions_2024_07_15.csv  test.csv
ci-and-publishing/loan-amount-api/app/: config.py
ci-and-publishing/model-package/: setup.py
ci-and-publishing/model-package/regression/: train_pipeline.py
ci-and-publishing/model-package/regression/processing/: data_manager.py
ci-and-publishing/model-package/requirements/: requirements.txt
evidently_monitoring_and_evaluation/: Dockerfile  docker-compose.yml  loan-amount-monitoring_and_evalutaion.ipynb  requirements.txt
evidently_monitoring_and_evaluation/config/: grafana_datasources.yaml
evidently_monitoring_and_evaluation/data/: reference_data.csv
evidently_monitoring_and_evaluation/data/.ipynb_checkpoints/: current_data-checkpoint.csv
evidently_monitoring_and_evaluation/db_data/: postmaster.pid
evidently_monitoring_and_evaluation/db_data/base/1/: 2619  2696  2840  2841  pg_internal.init
evidently_monitoring_and_evaluation/db_data/base/4/: pg_internal.init
evidently_monitoring_and_evaluation/db_data/base/5/: 1247  (+15 more)
evidently_monitoring_and_evaluation/db_data/global/: 1260  pg_control  pg_internal.init
evidently_monitoring_and_evaluation/db_data/pg_stat/: pgstat.stat
evidently_monitoring_and_evaluation/db_data/pg_xact/: 0000
evidently_monitoring_and_evaluation/model/: loan_amount_reg_model_v0.0.5.pkl
evidently_monitoring_and_evaluation/workspace/bcbcf169-0a8e-4297-ab9a-b2b7c8c67925/: metadata.json
loan-amount-model-api/app/: config.py
loan-amount-model-api/loan-amount-api/: requirements.txt  test_requirements.txt  tox.ini
loan-amount-model-api/loan-amount-api/app/: __init__.py  api.py  main.py
loan-amount-model-package/: MANIFEST.in
loan-amount-model-package/loan_amount_regression_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
loan-amount-model-package/regression/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
loan-amount-model-package/regression/config/: core.py
loan-amount-model-package/regression/processing/: data_manager.py  validation.py
loan-amount-model-package/regression/trained_models/: loan_pred_regression_model_output_v0.0.1.pkl
loan_amount_model_package/: README.md  mypy.ini  pyproject.toml  tox.ini
loan_amount_model_package/loan_amount_model_package/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
loan_amount_model_package/loan_amount_model_package/config/: core.py
loan_amount_model_package/loan_amount_model_package/processing/: data_manager.py  preprocessor.py  validation.py
loan_amount_model_package/loan_amount_model_package/trained_models/: loan_pred_regression_model_output_v0.0.3.pkl
loan_amount_model_package/tests/: conftest.py  test_pipeline_integrationtest.py  test_predict_unittest.py
loan_amount_model_package/tests/unit_tests/: test_predict.py
loanamount_env/: pyvenv.cfg
model-api/loan-amount-api/: requirements.txt
model-api/loan-amount-api/app/: api.py
model-package/: README.md  mypy.ini  setup.py
model-package/regression/: config.yml  pipeline.py  predict.py  train_pipeline.py
model-package/regression/config/: core.py
model-package/regression/processing/: data_manager.py  validation.py
model-package/tests/: test_prediction.py
prefect_batch_deployment_and_orchestration/: loan_model_inference.py  output_predictions_2024_07_27.csv
research/: loan-amount-pipeline.ipynb  loan-amount-prediction.ipynb
(+127 files in other folders)
