[tool.poetry]
name = "loan-amount-prediction"
version = "0.1.0"
description = "A package to estimate a predicted loan amount suitable for a customer"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
