[tool.poetry]
name = "loan_amount_model_package"
version = "0.0.3"
description = "A package to estimate a predicted loan amount suitable for a customer"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.3"
scikit-learn = "^1.5.0"
strictyaml = "^1.7.3"
feature-engine = "^1.8.0"
joblib = "^1.4.2"
mlflow = "^2.13.2"
ipykernel = "^6.29.4"
hyperopt = "^0.2.7"
scipy = "^1.13.1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
