[tool.poetry]
name = "loan_amount_model_package"
version = "0.0.7"
description = "A model package to estimate loan amount suitable for a customer"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"
tox = "^4.17.1"
mypy = "^1.11.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
